--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <input type="button" onclick="element(3)" id="el3">
     <input type="button" onclick="element(4)" id "el4">
     <input type="button" onclick="element(5)" id="el5">
-    <script src="sketch.js"></script>
+    <script src="tavola.js"></script>
   </body>
 </html>
