--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
     <script src="code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
   </head>
   <body>
     <input type="button" onclick="element(1)" id="el1">
+    <textarea readonly="" disabled="" id="el1t1">H</textarea>
+    <textarea readonly="" disabled="" id="el1t2">1</textarea>
     <input type="button" onclick="element(2)" id="el2">
+    <textarea readonly="" disabled="" id="el2t1">He</textarea>
+    <textarea readonly="" disabled="" id="el2t2">2</textarea>
     <input type="button" onclick="element(3)" id="el3">
-    <input type="button" onclick="element(4)" id "el4">
+    <input type="button" onclick="element(4)" id="el4">
     <input type="button" onclick="element(5)" id="el5">
     <script src="tavola.js"></script>
-  </body>
-</html>
+  
+</body></html>
