--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <textarea readonly="" disabled="" id="el2t1">He</textarea>
     <textarea readonly="" disabled="" id="el2t2">2</textarea>
     <input type="button" onclick="element(3)" id="el3">
+    <textarea readonly="" disabled="" id="el3t1">Li</textarea>
+    <textarea readonly="" disabled="" id="el3t2">3</textarea>
     <input type="button" onclick="element(4)" id="el4">
+    <textarea readonly="" disabled="" id="el4t1">Be</textarea>
+    <textarea readonly="" disabled="" id="el4t2">4</textarea>
     <input type="button" onclick="element(5)" id="el5">
+    <textarea readonly="" disabled="" id="el5t1">B</textarea>
+    <textarea readonly="" disabled="" id="el5t2">5</textarea>
+    <input type="button" onclick="element(6)" id="el6">
+    <textarea readonly="" disabled="" id="el6t1">C</textarea>
+    <textarea readonly="" disabled="" id="el6t2">6</textarea>
     <script src="tavola.js"></script>
   
 </body></html>
